pro/src/app/App/layout/Layout.module.scss
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/variables/_size.scss" as size;
@use "styles/variables/_z-index.scss" as zIndex;
@use "styles/mixins/fonts-design-system.scss" as fonts-design-system;

$connect-as-header-height: rem.torem(52px);

.layout {
  display: flex;
  flex-direction: column;
  height: 100vh;
  background-color: var(--color-background-accent-light);
}

.page-layout {
  display: flex;
  height: 100%;
  overflow: hidden;
  border: rem.torem(1px) solid var(--color-grey-medium);
  border-top: none;

  &-funnel {
    width: 100%;
  }

  &-connect-as {
    height: calc(100% - $connect-as-header-height);
  }

  @media (min-width: size.$desktop) {
    margin: 0 auto;
    width: rem.torem(size.$desktop);

    &-funnel {
      width: 100%;
    }
  }
}

.content-wrapper {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
  overflow-y: auto;
  background-color: var(--color-white);

  &-side {
    @media (min-width: size.$tablet) {
      flex-direction: row;
    }

    &-logo {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      min-height: rem.torem(120px);
      background-image: linear-gradient(
          97deg,
          var(--color-primary),
          var(--color-secondary)
      );

      @media (min-width: size.$tablet) {
        min-width: rem.torem(202px);
        width: size.$side-logo-width;
        min-height: 100vh;
        box-shadow: inset rem.torem(-10px) 0 rem.torem(20px) 0
        var(--color-large-shadow);
        max-width: size.$logo-side-width;
        position: sticky;
        height: 100vh;
        top: 0;
      }
    }
  }
}

.content-container {
  width: 100%;
  flex-grow: 1;
  padding: rem.torem(24px) rem.torem(24px) 0;
  background-color: var(--color-white);
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  @media (min-width: size.$mobile) {
    padding: size.$main-content-padding size.$main-content-padding 0;
  }

  &-funnel {
    background-color: var(--color-white);
    padding: 0;
  }

  &-logged-out {
    padding: 0;
  }
}

.content {
  background-color: var(--color-white);
  max-width: 100%;
  border: none;
  margin: 0;

  &-logged-out {
    padding: rem.torem(24px);
    margin: auto;
    min-height: calc(100vh - #{size.$footer-height});
    display: flex;
    flex-direction: column;
    justify-content: center;

    @media (min-width: size.$tablet) {
      min-width: size.$full-content-min-width;
      max-width: size.$full-content-max-width;
    }

    &-with-heading {
      min-height: calc(100vh - #{size.$footer-height} - rem.torem(32px) - var(--typography-title1-line-height));
    }
  }
}

.connect-as {
  height: $connect-as-header-height;
  background-color: var(--color-grey-light);
  display: flex;
  padding: rem.torem(16px);
  min-width: 100%;

  &-icon {
    color: var(--color-grey-dark);
  }

  &-text {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
  }
}

.main-heading-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: rem.torem(32px);
}

.main-heading {
  @include fonts-design-system.title1;
}

.back-to-nav-link {
  margin-left: rem.torem(16px);
  opacity: 0;
  height: rem.torem(24px);
  width: rem.torem(24px);
  display: flex;
  align-items: center;
  justify-content: center;

  &:active, &:focus {
    opacity: 1;
  }
}

